revise the website

--- a/jemdoc.css
+++ b/jemdoc.css
@@ -4,6 +4,11 @@ table#tlayout {
     border: none;
     border-collapse: separate;
     background: white;
+    display: block;
+	margin-right: auto;
+	margin-left: auto;
+	max-width: 1050px;
+	border-right: solid #EAEAEA;
 }
 
 body {
