--- a/jemdoc.css
+++ b/jemdoc.css
@@ -32,6 +32,8 @@ body {
 	white-space: nowrap;
     text-align: left;
     vertical-align: top;
+	position: fixed;
+    height: 100%;
 }
 
 #layout-menu td {
@@ -41,7 +43,7 @@ body {
 
 #layout-content {
 	padding-top: 0.0em;
-	padding-left: 1.0em;
+	padding-left: 170px;
 	padding-right: 1.0em;
     border: none;
     background: white;
