--- a/jemdoc.css
+++ b/jemdoc.css
@@ -74,6 +74,16 @@ a:hover {
 	border-bottom: 1px gray dotted;
 }
 
+.link-lookalike {
+  color: #224b8d;
+  text-decoration: none;
+  cursor: pointer; /* optional, to mimic interactivity */
+}
+
+.link-lookalike:hover {
+  border-bottom: 1px gray dotted;
+}
+
 #layout-menu a.current:link, #layout-menu a.current:visited {
 	color: #022b6d;
 	border-bottom: 1px gray solid;
